resource-manifests/sentiment-analysis-namespace.yaml
apiVersion: v1

kind: Namespace
metadata:
  name: sentiment-analysis
  labels:
    name: sentiment-analysis
