resource-manifests/node-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-server
  labels:
    app: node-server
spec:
  selector:
    matchLabels:
      app: node-server
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: node-server
    spec:
      containers:
      - image: helloitsjoe/node-server
        imagePullPolicy: Always
        name: node-server
        ports:
          - containerPort: 8080
