resource-manifests/old-preact-frontend2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: preact-frontend2
  labels:
    app: preact-frontend
spec:
  containers:
    - image: helloitsjoe/preact-frontend
      name: preact-frontend
      ports:
        - containerPort: 80
