resource-manifests/preact-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preact-frontend
spec:
  selector:
    matchLabels:
      app: preact-frontend
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: preact-frontend
    spec:
      containers:
        - image: helloitsjoe/preact-frontend:minikube
          imagePullPolicy: Always
          name: preact-frontend
          ports:
            - containerPort: 80
