resource-manifests/preact-frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: preact-frontend
  labels:
    app: preact-frontend
spec:
  containers:
    - image: helloitsjoe/preact-frontend
      name: preact-frontend
      ports:
        - containerPort: 80
