resource-manifests/sa-logic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sa-logic
  labels:
    app: sa-logic
spec:
  selector:
    matchLabels:
      app: sa-logic
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: sa-logic
    spec:
      containers:
        - image: helloitsjoe/sa-logic
          imagePullPolicy: Always
          name: sa-logic
          ports:
            - containerPort: 5000
