resource-manifests/service-frontend-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-lb
  namespace: sentiment-analysis
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: preact-frontend
