resource-manifests/service-node-server-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-server-lb
  namespace: sentiment-analysis
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: node-server
